feat: refactor rfid and create auth
