# core-service/internal/core/user/entity.go
@@ -8,25 +8,27 @@ import (
 type UserEntity struct {
 	ID        int32     `json:"id"`
 	CreatedAt time.Time `json:"created_at"`
-	Enabled   bool      `json:"enabled"`
 	Admin     bool      `json:"admin"`
 	Data      UserData  `json:"data" validate:"required,dive"`
+	Rfid      string    `json:"rfid"`
 }
 
 type UserData struct {
 	Username string `json:"username" validate:"required,min=3,max=32"`
 	Email    string `json:"email" validate:"required,email"`
+	Password string `json:"password" validate:"required,min=3,max=32"`
 }
 
 func FromAdminUserModel(user sqlc.AdminUser) UserEntity {
 	return UserEntity{
 		ID:        user.ID,
 		CreatedAt: user.CreatedAt,
-		Enabled:   true,
 		Admin:     true,
+		Rfid:      "",
 		Data: UserData{
 			Username: user.Username,
 			Email:    user.Email,
+			Password: user.Password,
 		},
 	}
 }
@@ -35,11 +37,12 @@ func FromUserModel(user sqlc.User) UserEntity {
 	return UserEntity{
 		ID:        user.ID,
 		CreatedAt: user.CreatedAt,
-		Enabled:   user.Enabled,
 		Admin:     false,
+		Rfid:      user.Rfid,
 		Data: UserData{
 			Username: user.Username,
 			Email:    user.Email,
+			Password: user.Password,
 		},
 	}
 }
